# docs/swagger.json
@@ -272,6 +272,46 @@
                     "tasks"
                 ],
                 "summary": "Get Tasks",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 20,
+                        "description": "items per page",
+                        "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "completed (true/false)",
+                        "name": "completed",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "format: yyyy-mm-dd",
+                        "name": "createdAtDateFrom",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "format: yyyy-mm-dd",
+                        "name": "createdAtDateTo",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Comma-separated list of category IDs (e.g. uuid1,uuid2)",
+                        "name": "categoryIds",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
